[project]
name = "paged-attn"
version = "0.1.0"
description = "A step-by-step learning implementation of PagedAttention (vLLM-style KV cache)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4,<2.6",
    "triton>=3.0,<3.2",
    "numpy>=1.26",
    "einops>=0.8",
    "matplotlib>=3.8",
    "rich>=13.7",
    "transformers>=4.44",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "pytest>=8.2",
]

[tool.uv]
# Use the CUDA 12.4 PyTorch wheels; works fine under driver 565 / runtime 12.7.
override-dependencies = []

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
